force-app/main/default/objects/Payment_Processor__c/Payment_Processor__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Payment Processor</label>
</CustomObject>