force-app/main/default/objects/Payment_Processor__c/fields/API_Login_Id__c.field-meta.xml
<CustomField>
    <fullName>API_Login_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>API Login Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>