force-app/main/default/objects/Payment_Processor__c/fields/Production_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Production_Endpoint__c</fullName>
    <label>Production Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>